--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dealerinspire\\CarsCommerceProtobufIntegration\\": "src/"
+            "Dealerinspire\\CarsCommerceProtobufIntegration\\Incentives": "src/Incentives/classes"
         }
     },
     "authors": [
