--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dealerinspire\\CarsCommerceProtobufIntegration\\Incentives": "src/Incentives/classes"
+            "Dealerinspire\\CarsCommerceProtobufIntegration\\Incentives\\": "src/Incentives/classes"
         }
     },
     "authors": [
